# TwokaB

./: .gitignore  BlazorWebView.sln  LICENSE  README.md  build.props
.github/workflows/: coreosx.yml  corewindows.yml  docfx.yml
BlazorApp/: BlazorApp.csproj  Startup.cs  _Imports.razor
BlazorApp.Mac/: BlazorApp.Mac.csproj  ViewController.cs  ViewController.designer.cs
BlazorApp.iOS/: BlazorApp.iOS.csproj  ViewController.cs  ViewController.designer.cs
BlazorApp.iOS/Properties/: AssemblyInfo.cs
BlazorApp/Properties/: launchSettings.json
BlazorWebView/: IBlazorWebView.cs
BlazorWebView.Mac/: BlazorWebView.Mac.csproj  BlazorWebView.cs  UrlSchemeHandler.cs
BlazorWebView.Mac/Properties/: AssemblyInfo.cs
WebWindow.Blazor/: ComponentsDesktop.cs  WebWindow.Blazor.csproj
docs/: docfx.json  index.md  toc.yml
docs/pages/: androidtutorial.md  changelog.md  index.md  iostutorial.md  mactutorial.md  prepare.md  toc.yml  wpftutorial.md
sample/BlazorApp.Android/: BlazorApp.Android.csproj  BlazorApp.Android.xml  MainActivity.cs
sample/BlazorApp.Mac/: AppDelegate.cs  BlazorApp.Mac.csproj  BlazorApp.Mac.xml  Info.plist  Main.cs  Main.storyboard  MainClass.cs  ViewController.cs  app.config  packages.config
sample/BlazorApp.Wpf/: App.xaml  App.xaml.cs  AssemblyInfo.cs  BlazorApp.Wpf.csproj  BlazorApp.Wpf_zbxpb0fs_wpftmp.xml  MainWindow.xaml  MainWindow.xaml.cs
sample/BlazorApp.iOS/: AppDelegate.cs  Application.cs  BlazorApp.iOS.csproj  BlazorApp.iOS.xml  Info.plist  Main.cs  Main.storyboard  SceneDelegate.cs  ViewController.cs  ViewController.designer.cs
src/BlazorWebView/: IPC.cs  (+22 more)
src/BlazorWebView.Native/: BlazorWebView.cpp  BlazorWebView.h  BlazorWebViewConfig.h.in  CMakeLists.txt  Exports.cpp  nuget.props.in  packages.config.in
(+80 files in other folders)
